--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -28,7 +28,6 @@
   },
   "containerEnv": {
     "http_proxy": "http://host.docker.internal:7890",
-    "https_proxy": "http://host.docker.internal:7890",
-    "no_proxy": "localhost,127.0.0.1"
+    "https_proxy": "http://host.docker.internal:7890"
   }
 }
