--- a/.gitignore
+++ b/.gitignore
@@ -17,10 +17,10 @@ package-lock.json
 
 # IDE configurations
 .idea
-.vscode/*
-!.vscode/settings.json
-!.vscode/extensions.json
-!.vscode/tasks.json
+.vscode
+# !.vscode/settings.json
+# !.vscode/extensions.json
+# !.vscode/tasks.json
 
 # Misc
 _sass/vendors
